# proyecto_alexa

./: .env.example  .gitignore  AGENTS.md  alembic.ini  docker-compose.yml  jarvis-os.postman_collection.json  pyproject.toml
alembic/: env.py
alembic/versions/: 001_create_facts_and_conversations.py
app/: main.py
app/api/: dependencies.py  router.py  service.py
app/devices/: client.py  service.py
app/devices/domain/: models.py
app/devices/ports/: __init__.py  device_port.py
app/infrastructure/: database.py
app/llm_service/: client.py  service.py
app/llm_service/domain/: models.py
app/llm_service/ports/: __init__.py  llm_port.py
app/memory/: orm.py  repository.py  service.py
app/memory/domain/: models.py  repository.py
app/orchestrator/: router.py  service.py
app/orchestrator/domain/: decision.py  proposed_action.py
app/orchestrator/ports/: __init__.py
tests/test_api/: test_chat_service.py
tests/test_devices/: test_device_service.py  test_home_assistant_client.py
tests/test_llm_service/: test_llm_service.py
tests/test_memory/: test_service.py
tests/test_orchestrator/: test_orchestrator_service.py  test_router.py
